test_regress/t/t_dpi_name_bad.out
%Error: t/t_dpi_name_bad.v:11:32: DPI function has illegal characters in C identifier name: badly.named
   11 |    import "DPI-C" function int \badly.named (int i);
      |                                ^~~~~~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_dpi_name_bad.v:14:17: DPI function has illegal characters in C identifier name: badly.expt
   14 |    function int \badly.expt ; return 0; endfunction
      |                 ^~~~~~~~~~~
%Error: Exiting due to
